--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "gulp-sitemap": "^8.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-webpack": "^1.5.0",
+    "mouse-follower": "^1.1.2",
     "sass": "^1.72.0",
     "smooth-scrollbar": "^8.8.4",
-    "split-type": "^0.3.4",
-    "swiper": "^11.0.7"
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
